# docs/swagger.json
@@ -1501,6 +1501,57 @@
                 }
             }
         },
+        "/tools/test/init/db": {
+            "get": {
+                "description": "tables: project instance server",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Tools"
+                ],
+                "summary": "基数据 - 生成mysql导入脚本",
+                "parameters": [
+                    {
+                        "enum": [
+                            "11",
+                            "12",
+                            "21",
+                            "22"
+                        ],
+                        "type": "string",
+                        "description": "来源",
+                        "name": "X-Source-Type",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "6",
+                        "description": "项目ID",
+                        "name": "X-Project-Id",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "imzgoframe",
+                        "description": "访问KEY",
+                        "name": "X-Access",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/httpresponse.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/user/delete": {
             "delete": {
                 "security": [
@@ -1870,6 +1921,10 @@
                 "id": {
                     "description": "自增ID",
                     "type": "integer"
+                },
+                "lang": {
+                    "description": "实现语言1php2go3java4js",
+                    "type": "string"
                 },
                 "name": {
                     "description": "名称",
